--- a/style.css
+++ b/style.css
@@ -7,6 +7,81 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --font-primary: 'Baloo Da 2', serif;
+  --font-secundary: 'Josefin Slab', serif;
+  --font-action: 'Mulish', serif;
+}
+
+.hamburguer {
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.show-menu .hamburguer {
+  right: 18rem;
+}
+
+.line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #fff;
+  box-shadow: 0.1rem 0.1rem 1px #000;
+  transition: transform 1s;
+}
+
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.3rem, 0.45rem);
+}
+
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.45rem);
+}
+
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  height: 2rem;
+  width: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #a044ff;
+  color: #fff;
+  font-family: var(--font-action);
+  opacity: 0;
+}
+
+/* prettier-ignore */
+.hamburguer span::before {
+  content: "";
+  position: absolute;
+  border-right: .5rem solid #a044ff;
+  border-top: .5rem solid transparent;
+  border-left: .5rem solid transparent;
+  border-bottom: .5rem solid transparent;
+  left: -1rem;
+}
+
+.show-menu .hamburguer:hover span {
+  opacity: 1;
 }
 
 header {
@@ -49,7 +124,7 @@ header {
 .banner h1 {
   color: #ffffff;
   font-size: 3.5rem;
-  font-family: 'Baloo Da 2', serif;
+  font-family: var(--font-primary);
   font-weight: 200;
   text-shadow: 0.2rem 0.3rem 2px rgba(0, 0, 0, 0.4);
   line-height: 3.5rem;
@@ -59,7 +134,7 @@ header {
 }
 
 .banner p {
-  font-family: 'Josefin Slab', serif;
+  font-family: var(--font-secundary);
   color: #fff;
   font-size: 2rem;
   text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
@@ -70,7 +145,7 @@ header {
 
 /* prettier-ignore */
 .banner button {
-  font-family: 'Mulish', serif;
+  font-family: var(--font-action);
   color: #fff;
   cursor: pointer;
   text-transform: uppercase;
@@ -97,4 +172,66 @@ header {
 
 .banner button:hover {
   color: #000;
+}
+
+.sidebar {
+  background-color: #fff;
+  height: 100vh;
+  width: 20rem;
+  position: fixed;
+  top: 0;
+  right: -20rem;
+  transition: all 1s;
+}
+
+.show-menu .sidebar {
+  right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-item {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.menu-link {
+  font-family: var(--font-action);
+  font-size: 2rem;
+  color: #555;
+  transition: color 1s;
+}
+
+.menu-link:hover {
+  color: #6a3093;
+}
+
+.social-media {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-media i {
+  background-color: #6a3093;
+  color: rgba(255, 255, 255, 1);
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: background-color 1s;
+}
+
+.social-media i:hover {
+  background-color: #a044ff;
 }
